@@ -2,6 +2,9 @@ GenericSetup Product Changelog
 
   GenericSetup 1.4.1-beta (unreleased)
 
+    - When loading multiple profiles reload the list of steps to use after
+      each import. https://bugs.launchpad.net/zope-cmf/+bug/213905
+
 
   GenericSetup 1.4.0 (2008/03/23)
 
